IN DEVELOPMENT

  IMPROVEMENTS:
    * ``bzr help commands`` output is now shorter (Aaron Bentley)

  INTERNALS:

    * ``TestCase.run_bzr``, ``run_bzr_captured``, and ``run_bzr_subprocess``
      can take a ``working_dir='foo'`` parameter, which will change directory 
      for the command. (John Arbash Meinel)

    * ``bzrlib.lazy_regex.lazy_compile`` can be used to create a proxy
      around a regex, which defers compilation until first use. 
      (John Arbash Meinel)

    * New ``ChrootTransportDecorator``, accessible via the ``chroot+`` url
      prefix.  It disallows any access to locations above a set URL.  (Andrew
      Bennetts)

  BUG FIXES:

    * bzr branch/pull no longer complain about progress bar cleanup when
      interrupted during fetch.  (Aaron Bentley, #54000)

    * ``WorkingTree.set_parent_trees()`` uses the trees to directly write
      the basis inventory, rather than going through the repository. This
      allows us to have 1 inventory read, and 2 inventory writes when
      committing a new tree. (John Arbash Meinel)

    * When reverting, files that are not locally modified that do not exist
      in the target are deleted, not just unversioned (Aaron Bentley)

    * When trying to acquire a lock, don't fail immediately. Instead, try
      a few times (up to 1 hour) before timing out. Also, report why the
      lock is unavailable (John Arbash Meinel, #43521, #49556)

    * Leave HttpTransportBase daughter classes decides how they
      implement cloning. (Vincent Ladeuil, #61606)

   * diff3 does not indicate conflicts on clean merge. (Aaron Bentley)

    * The smart server now dispatches commands with non-ascii paths correctly.
      (Andrew Bennetts)

  TESTING:

    * New test base class TestCaseWithMemoryTransport offers memory-only
      testing facilities: its not suitable for tests that need to mutate disk
      state, but most tests should not need that and should be converted to